k8s/www-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: symfony-k8s-www-ingress
  namespace: symfony-k8s
  labels:
    app: symfony-k8s
    tier: www
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: symfony-k8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: symfony-k8s-www-service
                port:
                  number: 80
